k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: news-mysql
---
apiVersion: v1
kind: Namespace
metadata:
  name: news-redpanda
---
apiVersion: v1
kind: Namespace
metadata:
  name: news-scraper
---
apiVersion: v1
kind: Namespace
metadata:
  name: news-processor
---
apiVersion: v1
kind: Namespace
metadata:
  name: news-api
