k8s/redpanda.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redpanda
  namespace: news-redpanda
spec:
  selector:
    matchLabels:
      app: redpanda
  template:
    metadata:
      labels:
        app: redpanda
    spec:
      containers:
      - name: redpanda
        image: docker.redpanda.com/redpandadata/redpanda:v24.1.1
        command:
        - /bin/sh
        - -c
        - |
          rpk redpanda start \
          --smp 1 \
          --memory 512M \
          --overprovisioned \
          --kafka-addr PLAINTEXT://0.0.0.0:29092,OUTSIDE://0.0.0.0:9092 \
          --advertise-kafka-addr PLAINTEXT://redpanda.news-redpanda.svc.cluster.local:29092,OUTSIDE://localhost:9092
        ports:
        - containerPort: 9092
          name: outside
        - containerPort: 29092
          name: plaintext
        livenessProbe:
          exec:
            command: ["rpk", "cluster", "health"]
          initialDelaySeconds: 30
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: redpanda
  namespace: news-redpanda
spec:
  ports:
  - port: 29092
    name: plaintext
  - port: 9092
    name: outside
  selector:
    app: redpanda
